[project]
name = "hammer-vlsi"
version = "0.0.0"
description = "Hammer is a physical design framework that wraps around vendor specific technologies and tools to provide a single API to create ASICs."
authors = [
    {name = "Colin Schmidt", email = "colin.schmidt@sifive.com"},
    {name = "Edward Wang", email = "edward.c.wang@compdigitec.com"},
    {name = "John Wright", email = "johnwright@eecs.berkeley.edu"},
]
maintainers = [
    {name = "Harrison Liew", email = "harrisonliew@berkeley.edu"},
    {name = "Daniel Grubb", email = "dpgrubb@berkeley.edu"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.12.2,<3",
    "PyYAML>=6.0,<7",
    "ruamel.yaml>=0.17.21,<0.18",
    "networkx>=3.0,<4",
    "numpy>=1.23.0,<2",
    "sphinxcontrib-mermaid>=0.8.1,<0.9",
    "psycopg2>=2.9.11,<3",
    "asyncpg>=0.30.0,<1",
]

[project.optional-dependencies]
asap7-gdstk = ["gdstk>=0.9.0,<0.10"]
asap7 = ["gdspy==1.4"]

[project.scripts]
hammer-generate-mdf = "hammer.shell.hammer_generate_mdf:main"
get-config = "hammer.shell.get_config:main"
hammer-vlsi = "hammer.shell.hammer_vlsi:main"
hammer-shell-test = "hammer.shell.hammer_shell_test:main"
hammer-pd-store = "hammer.shell.pd_store_cli:main"
readlink-array = "hammer.shell.readlink_array:main"
yaml2json = "hammer.shell.yaml2json:main"
asap7_gds_scale = "hammer.technology.asap7.gds_scale:main"

[project.urls]
Repository = "https://github.com/ucb-bar/hammer"

[dependency-groups]
dev = [
    "pytest>=7.1,<8",
    "pyright>=1.1,<2",
    "types-PyYAML>=6.0.0,<7",
    "tox>=3.25.1,<4",
    "Sphinx>=5.1.1,<6",
    "sphinx-rtd-theme>=1.0.0,<2",
    "myst-parser>=0.18.0,<0.19",
    "sphinx-jsonschema>=1.19.1,<2",
    "sphinx-rtd-size>=0.2.0,<0.3",
    "pylint>=2.15,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hammer"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39,py310
isolated_build = True

[testenv]
deps = pytest
commands =
  pytest tests/ {posargs}
"""

[tool.pylint.format]
# Maximum number of characters on a single line.
max-line-length = 120

[tool.pylint.reports]
output-format = "text"
reports = true

[tool.pylint."messages control"]
# Disable no-else-return since it's sometimes clearer to use else
# Also emulates a functional programming style
# Disable len-as-condition since len(lst) == 0 is more clear on types
# where as if <var> is confusing since it's not clear what <var> is.
disable = ["no-else-return", "len-as-condition"]

[tool.pyright]
exclude = ["doc/**", "e2e/**", "test_scripts/**"]
include = ["hammer", "tests"]
reportMissingImports = true
typeCheckingMode = "standard"
